feat: split fetching data from api logic

--- a/src/features/playground/query-response-section/QueryResponseSection.module.scss
+++ b/src/features/playground/query-response-section/QueryResponseSection.module.scss
@@ -7,6 +7,10 @@
 .response-box {
   width: 100%;
   flex: 1;
+
+  .editor-hidden {
+    display: none;
+  }
 }
 
 .api-title {
@@ -16,4 +20,5 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  user-select: all;
 }
