feat: improve auth managing and split ui logic from auth feature components

--- a/src/components/common/buttons/fancy-button/FancyButton.module.scss
+++ b/src/components/common/buttons/fancy-button/FancyButton.module.scss
@@ -1,8 +1,4 @@
-.login-link {
-  text-decoration: none;
-}
-
-.start-button {
+.fancy-button {
   width: 200px;
   height: 50px;
   border-radius: 10px;
