--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,8 @@ body {
   overflow-x: hidden;
   background: url("./assets//img/graph.svg") repeat, $color-primary;
   background-size: 50%;
+  scroll-behavior: smooth;
+
   &::-webkit-scrollbar {
     width: 0;
     height: 0;
