feat: change variables and headers box size when open

--- a/src/features/playground/styles.scss
+++ b/src/features/playground/styles.scss
@@ -1,4 +1,5 @@
 .playground {
+  min-height: 600px;
   background-color: $color-primary;
   height: calc(100vh - $header-max-height);
   width: 100%;
