--- a/src/features/playground/query-request-section/QueryRequestSection.module.scss
+++ b/src/features/playground/query-request-section/QueryRequestSection.module.scss
@@ -1,11 +1,16 @@
 .query-box {
   width: 100%;
-  flex: 1;
+  flex: 1 1 65%;
 }
 
 .params-box {
   width: 100%;
   max-height: 35%;
+}
+
+.params-box-open {
+  height: 35%;
+  transition: all 0.5s;
 }
 
 .arrow-button {
