--- a/src/components/common/navbar/Navbar.module.scss
+++ b/src/components/common/navbar/Navbar.module.scss
@@ -17,7 +17,7 @@
     left: 0;
     transform-origin: left;
     scale: 0 1;
-    transition: scale 0.3s linear 0.1s;
+    transition: scale 0.2s ease-out;
   }
 
   &::after {
@@ -31,7 +31,7 @@
     right: 0;
     transform-origin: right;
     scale: 0 1;
-    transition: scale 0.3s linear 0.1s;
+    transition: scale 0.2s ease-out;
   }
 
   &:hover {
