--- a/src/index.scss
+++ b/src/index.scss
@@ -34,7 +34,7 @@ body {
   padding-top: $header-max-height;
   color: $color-main;
   min-height: 100vh;
-  max-width: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
