--- a/src/features/playground/playground-api/PlaygroundApi.module.scss
+++ b/src/features/playground/playground-api/PlaygroundApi.module.scss
@@ -4,15 +4,6 @@
   justify-content: space-evenly;
 }
 
-.response-box {
-  width: 100%;
-  flex: 1;
-
-  .editor-hidden {
-    display: none;
-  }
-}
-
 .api-box {
   display: flex;
   align-items: center;
@@ -26,6 +17,7 @@
   border: none;
   font-size: 16px;
   padding: 10px;
+  color: rgba($color-positive, 0.7);
   overflow: hidden;
 }
 
