--- a/src/features/schema/Schema.module.scss
+++ b/src/features/schema/Schema.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin: 10px 0;
+  margin: 0 0 10px 0;
 
   &::-webkit-scrollbar {
     width: 0;
